# Audit_AI

./: .gitignore  PHASE3_COMPLETION_SUMMARY.md  PHASE3_IMPLEMENTATION.md  PHASE3_QUICKSTART.md
backend/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  test_rag_services.py  verify_phase3.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  __init__.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/api/v1/: __init__.py  chat.py  health.py  indexing.py  projects.py  search.py
backend/app/clients/: __init__.py  qdrant_client.py  redis_client.py
backend/app/core/: config.py  exceptions.py  logging.py  middleware.py
backend/app/db/: __init__.py  base.py  init_db.py  seed.py  session.py
backend/app/models/: __init__.py  onboarding.py  project.py  user.py
backend/app/schemas/: __init__.py  chat.py  common.py  project.py  search.py  user.py
backend/app/services/: chat_service.py  chunking_service.py  embedding_service.py  llm_service.py  project_service.py  prompt_service.py  rag_service.py  vector_store_service.py
backend/app/utils/: __init__.py  pagination.py
backend/tests/: __init__.py  conftest.py  test_health.py
fastapi-template/: pyproject.toml  requirements.txt
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
frontend/app/chat/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/projects/: page.tsx
frontend/components/chat/: ChatInput.tsx  ChatInterface.tsx  (+2 more)
frontend/hooks/: useChat.ts  useProjects.ts  useSearch.ts
frontend/lib/: api.ts  types.ts  utils.ts
my-typescript-project/: README.md  package.json
my-typescript-project/src/: app.ts
(+18 files in other folders)
