[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-onboarding-system"
version = "0.1.0"
description = "AI-powered Engineering Onboarding & Knowledge Operating System"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Engineering Team"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy[asyncio]==2.0.23",
    "asyncpg==0.29.0",
    "alembic==1.12.1",
    "pydantic[email]==2.5.0",
    "pydantic-settings==2.1.0",
    "aioredis==2.0.1",
    "qdrant-client==2.7.0",
    "loguru==0.7.2",
    "python-dotenv==1.0.0",
    "httpx==0.25.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-httpx==0.26.0",
    "black==23.12.0",
    "ruff==0.1.8",
    "mypy==1.7.1",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
